# Modulr

./: .gitignore  README.md  modulr.py  pyproject.toml  test-suite.sh
.github/workflows/: ci.yml
tests/: checkresults.py
tests/nested_structure/expected/articles/: test-article.html
tests/nested_structure/src/articles/latest/: new_article.html
testsuite/: checkresults.py
testsuite/nested_structure/expected/: index.html
testsuite/nested_structure/expected/articles/latest/: new_article.html
testsuite/nested_structure/src/articles/: test-article.html
testsuite/nested_structure/src/components/: nav.html
testsuite/scripts_included/expected/: index.html
testsuite/scripts_included/src/: index.html
testsuite/scripts_included/src/components/: javascript.js
testsuite/styles_included/expected/: index.html
testsuite/styles_included/src/: index.html
