[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modulr"
version = "0.0.1"
description = "A simple Python script for modular Frontend web development without the runtime cost of Native Web Components or the bloat of large Frontend frameworks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "GrammAcc", email = "grammaticallyacceptable@grammacc.dev" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/GrammAcc/modulr"
Issues = "https://github.com/GrammAcc/modulr/issues"
Repository = "https://github.com/GrammAcc/modulr"

[tool.hatch.envs.default]
python = "3.12"
dependencies = ["black"]

[tool.hatch.envs.default.scripts]
test = "bash test-suite.sh"
format = "black ."
